--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
-<title>Test</title>
+<title>Site-ul lui TheDrop.</title>>
 <body>
+	<style type="text/css">
+		background: #200122;  
+		background: -webkit-linear-gradient(to right, #6f0000, #200122);  
+		background: linear-gradient(to right, #6f0000, #200122); 
+
+	</style>
 	
 Test.
 
