--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
-<title>Site-ul lui TheDrop.</title>>
-<body>
+<title>Site-ul lui TheDrop.</title>
 	<style type="text/css">
 		background: #200122;  
 		background: -webkit-linear-gradient(to right, #6f0000, #200122);  
 		background: linear-gradient(to right, #6f0000, #200122); 
 
 	</style>
+<body>
 	
 <center><h1>TheDrop. seful tau.</h1></center>
 
