--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
 <title>Site-ul lui TheDrop.</title>
 	<style type="text/css">
+	.body{
 		background: #200122;  
 		background: -webkit-linear-gradient(to right, #6f0000, #200122);  
 		background: linear-gradient(to right, #6f0000, #200122); 
+	}
 
 	</style>
 <body>
