--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <title>Site-ul lui TheDrop.</title>
 	<style type="text/css">
-	.body{
+	body{
 		background: #200122;  
 		background: -webkit-linear-gradient(to right, #6f0000, #200122);  
 		background: linear-gradient(to right, #6f0000, #200122); 
