--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 <title>Site-ul lui TheDrop.</title>
 	<style type="text/css">
 	body{
-		background: #200122;  
-		background: -webkit-linear-gradient(to right, #6f0000, #200122);  
-		background: linear-gradient(to right, #6f0000, #200122); 
+    background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);
 	}
 
 	</style>
