--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ var x = setInterval(function() {
   }
 }, 1000);
 </script>
-
+<p>Time left pana la dezvaluirea notelor de la teza:</p>
 <h2 id="demo"></h2>
 
 <center><h2><b>FII ROACER</b></h2></center>
