--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ var x = setInterval(function() {
   }
 }, 1000);
 </script>
-<center><p>Time left pana la dezvaluirea notelor de la teza:</p>
+<center><p>Time left pana la dezvaluirea notelor de la teza la romîna:</p>
 <h3 id="demo"></h3></center>
 
 <center><h2><b>FII ROACER</b></h2></center>
