--- a/index.html
+++ b/index.html
@@ -42,13 +42,11 @@ var x = setInterval(function() {
 <center><p>Time left pana la dezvaluirea notelor de la teza la romîna:</p>
 <h3 id="demo"></h3></center>
 
-<center><h2><b>FII ROACER</b></h2></center>
+<center><h2><b>FII JMEKER</b></h2></center>
 
-<center><iframe width="560" height="315" src="https://www.youtube.com/embed/kerGU9qjJgw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+<center><iframe width="460" height="215" src="https://www.youtube.com/embed/kerGU9qjJgw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
 
-<center><h2><b>FII PROST</b></h2></center>
-
-<center><iframe width="560" height="315" src="https://www.youtube.com/embed/AzWQrZ5sAmY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+<center><iframe width="460" height="215" src="https://www.youtube.com/embed/AzWQrZ5sAmY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
 
 
 </body>
