--- a/index.html
+++ b/index.html
@@ -44,9 +44,7 @@ var x = setInterval(function() {
 
 <center><h2><b>FII JMEKER</b></h2></center>
 
-<center><iframe width="460" height="215" src="https://www.youtube.com/embed/kerGU9qjJgw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
-
-<center><iframe width="460" height="215" src="https://www.youtube.com/embed/AzWQrZ5sAmY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+<center><iframe width="460" height="215" src="https://www.youtube.com/embed/kerGU9qjJgw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>  <iframe width="460" height="215" src="https://www.youtube.com/embed/AzWQrZ5sAmY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
 
 
 </body>
