--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <title>Site-ul lui TheDrop.</title>
 	<style type="text/css">
 	body{
-    background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);
+    background: #0F2027;  /* fallback for old browsers */
+	background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);  /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to right, #2C5364, #203A43, #0F2027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 	}
 
 	</style>
