--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
 
 	}
 
+	h1{
+		color: blue;
+	}
+
+	h2{
+		color:red;
+	}
+
+	h3{
+		color:yellow;
+	}
+
 	</style>
 <body>
 	
@@ -47,7 +59,7 @@ var x = setInterval(function() {
 
 <center><h2><b>FII JMEKER</b></h2></center>
 
-<center><iframe width="560" height="315" src="https://www.youtube.com/embed/kerGU9qjJgw" frameborder="1" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>  <iframe width="560" height="315" src="https://www.youtube.com/embed/AzWQrZ5sAmY" frameborder="1" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+<center><iframe width="560" height="315" src="https://www.youtube.com/embed/kerGU9qjJgw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>  <iframe width="560" height="315" src="https://www.youtube.com/embed/AzWQrZ5sAmY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
 
 
 </body>
