--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <title>Site-ul lui TheDrop.</title>
 	<style type="text/css">
 	body{
-    background: #0F2027;  /* fallback for old browsers */
-	background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);  /* Chrome 10-25, Safari 5.1-6 */
-	background: linear-gradient(to right, #2C5364, #203A43, #0F2027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background-image: url("/img/456536-min-min.jpg.6a9071ce8a95743a061dfc39046c9ef9.jpg.89d71696e4e6e4db08d1d269db347745.jpg")
+
 
 	}
 
