--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Site-ul lui TheDrop.</title>
 	<style type="text/css">
 	body{
-    background-image: url("/img/456536-min-min.jpg.6a9071ce8a95743a061dfc39046c9ef9.jpg.89d71696e4e6e4db08d1d269db347745.jpg")
+    background-image: url("img/76f23ef08dc1ebabf4589ca0daa1fc14.jpg")
 
 
 	}
