--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <span class="glitch__color glitch__color--red">TheDrop.</span>
     <span class="glitch__color glitch__color--blue">TheDrop.</span>
     <span class="glitch__color glitch__color--green">TheDrop.</span>
-    <span class="glitch__main">TheDrop.</span>
+    <span class="glitch__main" id="text-jmk" name="text-jmk">TheDrop.</span>
     <span class="glitch__line glitch__line--first"></span>
     <span class="glitch__line glitch__line--second"></span>
 </div>
@@ -37,6 +37,63 @@ body {
     width:100%;
 }
 </style>
+
+<script>
+
+var speed=2
+
+var text_el = document.getElementById ? document.getElementById("text-jmk") : document.all.highlight;
+var yt_el = document.getElementById ? document.getElementById("youtube-link") : document.all.highlight;
+
+var hex=new Array("00","14","28","3C","50","64","78","8C","A0","B4","C8","DC","F0")
+var r=1
+var g=1
+var b=1
+var seq=1
+function changetext(){
+rainbow="#"+hex[r]+hex[g]+hex[b]
+text_el.style.color=rainbow
+yt_el.style.color=rainbow
+}
+function change(){
+if (seq==6){
+b--
+if (b==0)
+seq=1
+}
+if (seq==5){
+r++
+if (r==12)
+seq=6
+}
+if (seq==4){
+g--
+if (g==0)
+seq=5
+}
+if (seq==3){
+b++
+if (b==12)
+seq=4
+}
+if (seq==2){
+r--
+if (r==0)
+seq=3
+}
+if (seq==1){
+g++
+if (g==12)
+seq=2
+}
+changetext()
+}
+function starteffect(){
+if (document.all||document.getElementById)
+flash=setInterval("change()",speed)
+}
+starteffect()
+</script>
 <!--
 <div class="stars">
     <div class="stars__star"></div>
