--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body background="imsuky.gif">
+<embed src="thedrop.mp3" width="180" height="90" loop="true" autostart="true" hidden="true">
 
 <div class="glitch" data-text="TheDrop.">
 
