--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         <div class="one-full column"><h1 class="emerald-text">Projects:</h1></div>
         <div class="one-full column">
           <p><a href="https://github.com/TheDropX/Presences" target="_blank">TheDropX/Presences</a></p>
+            <p><a href="https://github.com/TheDropX/API" target="_blank">TheDropX/API</a></p>
         </div>
       </div>
     </section>
