--- a/index.html
+++ b/index.html
@@ -56,6 +56,17 @@
       </div>
     </section>
 
+    <section class="container">
+      <div class="box-container row">
+        <div class="one-full column"><h1 class="emerald-text">Discord status</h1></div>
+        <div class="one-full column">
+          <p>
+            asdasdasd
+          </p>
+        </div>
+      </div>
+    </section>
+
     <footer class="center box-container primary no-border-radius">
       <p class="no-margin">
         Developed by TheDrop.
