--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="one-full column"><h1 class="emerald-text">Discord status</h1></div>
         <div class="one-full column">
           <p>
-            asdasdasd
+            Coming soon...
           </p>
         </div>
       </div>
