--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
         <div class="one-full column"><h1 class="emerald-text">Discord status</h1></div>
         <div class="one-full column">
           <p>
+              <h1>Authors</h1>
+              <ul id="authors"></ul>
             <script>
                 function createNode(element) {
       return document.createElement(element);
