--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   }
 
   const ul = document.getElementById('presence');
-  const url = 'http://api.thedrop.me/presences/293828021134295040';
+  const url = 'https://api.thedrop.me/presences/293828021134295040';
   fetch(url)
   .then((resp) => resp.json())
   .then(function(data) {
