--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="box-container row">
         <div class="one-full column"><h1 class="emerald-text">Discord status</h1></div>
         <div class="one-full column">
-          <p>
+          <p><!--
               <ul id="presence"></ul>
             <script>
                 function createNode(element) {
@@ -90,7 +90,7 @@
   .catch(function(error) {
     console.log(error);
   });   
-              </script>
+              </script>-->
             Coming soon...
           </p>
         </div>
