--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               </script>-->
 
               <script> 
-                  fetch('https://api.github.com/users')
+                  fetch('https://api.thedrop.me/presences/293828021134295040')
     .then(res => res.json())//response type
     .then(data => console.log(data));
     </script>
