--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 headers.append('Content-Type', 'application/json');
 headers.append('Accept', 'application/json');
 
-headers.append('Access-Control-Allow-Origin', 'https://api.thedrop.me');
+headers.append('Access-Control-Allow-Origin', 'https://api.thedrop.me/presences/293828021134295040');
 headers.append('Access-Control-Allow-Credentials', 'true');
                   fetch('https://api.thedrop.me/presences/293828021134295040')
     .then(res => res.json())//response type
