--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="box-container row">
         <div class="one-full column"><h1 class="emerald-text">Discord status</h1></div>
         <div class="one-full column">
-          <p><
+          <p>
               <ul id="presence"></ul>
             <script>
     fetch('https://jsonplaceholder.typicode.com/users')
@@ -82,7 +82,7 @@
                     });
                 })
               </script>
-
+<!--
               <script> 
                 let headers = new Headers();
 
@@ -94,7 +94,7 @@ headers.append('Access-Control-Allow-Credentials', 'true');
                   fetch('https://api.thedrop.me/presences/293828021134295040')
     .then(res => res.json())//response type
     .then(data => console.log(data));
-    </script>
+    </script> -->
             Coming soon...
           </p>
         </div>
