--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                              <li> User Address : ${city}, ${street} </li>
                          </ul>
                       </div>`;
-                        document.getElementById('result').innerHTML = result;
+                        document.getElementById('presence').innerHTML = result;
                     });
                 })
               </script>
