--- a/index.html
+++ b/index.html
@@ -77,7 +77,6 @@
                     });
                 })
               </script>
-<!--
               <script> 
                 let headers = new Headers();
 
@@ -86,10 +85,8 @@ headers.append('Accept', 'application/json');
 
 headers.append('Access-Control-Allow-Origin', 'https://thedrop.me');
 headers.append('Access-Control-Allow-Credentials', 'true');
-                  fetch('https://api.thedrop.me/presences/293828021134295040')
-    .then(res => res.json())//response type
-    .then(data => console.log(data));
-    </script> -->
+
+    </script> 
             Coming soon...
           </p>
         </div>
