--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <p>
               <ul id="presence"></ul>
             <script>
-    fetch('https://api.thedrop.me/presences/293828021134295040')
+    fetch('api.thedrop.me/presences/293828021134295040')
         .then((res) => { return res.json() })
         .then((data) => {
             data.forEach((user) => {
