--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
         .then((res) => { return res.json() })
         .then((data) => {
             data.forEach((user) => {
+              const result = "";
                 result +=
                     `<div>
                          <ul class="w3-ul">
