--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     fetch('https://api.thedrop.me/presences/293828021134295040')
         .then((res) => { return res.json() })
         .then((data) => {
-          let result = "";
+          let result = "a";
             data.forEach((user) => {
               const { userID, username } = user
                 result +=
