--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
           <p>
               <ul id="presence"></ul>
             <script>
+              const ul = document.getElementById('presence');
     fetch('https://api.thedrop.me/presences/293828021134295040')
         .then((res) => { return res.json() })
         .then(function(data) {
