--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
       <div class="box-container row">
         <div class="one-full column"><h1 class="emerald-text">Discord status</h1></div>
         <div class="one-full column">
-          <p>
-              <ul id="presence"></ul>
+          <p id="presence">
             <script>
               const ul = document.getElementById('presence');
     fetch('https://api.thedrop.me/presences/293828021134295040')
