--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     })
   })
               </script>
-            Coming soon...
+            Loading...
           </p>
         </div>
       </div>
