--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="one-full column">
             <div class="discord-usercard">
                 <div  class="usercard__header">
-                  <div  class="header__avatar" style="background-image: url(&quot;https://cdn.discordapp.com/avatars/293828021134295040/895232b24cdccad9b00a035f5e5eeee9.png?size=2048&quot;);"></div>
+                  <div  class="header__avatar" style="background-image: url('https://cdn.discordapp.com/avatars/293828021134295040/f2d63c90ab2d4705d1f12847d7198035.png?size=2048');"></div>
                   <div  class="header__info">
                     <div  class="info__nameTag">
                       <span  class="username"><?php echo $row['Username']; ?></span><span  class="discriminator"><?php echo $row['UserTag']; ?></span></div>
