--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                   <div class="header__avatar" style="background-image: url('https://cdn.discordapp.com/avatars/293828021134295040/f2d63c90ab2d4705d1f12847d7198035.png?size=2048');"></div>
                   <div class="header__info">
                     <div class="info__nameTag">
-                      <span class="username"><p id="username">Loading...</p></span> <span class="discriminator"><p id="discriminator">Loading...</p></span></div>
+                      <span class="username"><p id="username">Loading...</p></span></div>
                       <div class="info__badges">
                         <div class="badge-wrapper">
                           <div class="badge badge_brilliance"></div>
@@ -99,15 +99,13 @@
 
               const ul = document.getElementById('presence');
               const username = document.getElementById('username');
-              const discriminator = document.getElementById('discriminator');
 
               fetch('https://api.thedrop.me/presences/293828021134295040')
                   .then((res) => { return res.json() })
                   .then(function(data) {
               return data.map(function(data) {
 
-                username.innerHTML = `${data.username}`;
-                discriminator.innerHTML = `${data.discriminator}`;
+                username.innerHTML = `${data.userTag}`;
 
               })
             })
