--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                               <div  class="info__game">
                                 <div  class="game__icon">
                                   <p id="game"></p>
-                                  <p id="status"></p>
+                                  <p id="state"></p>
                                   <?php if($row['largeImage'] != 'null') { echo '<img  src="https://cdn.discordapp.com/app-assets/' . $row['applicationID'] . '/' . $row['largeImage'] . '.png" class="game">'; } ?>
                                   <?php if($row['smallImage'] != 'null') { echo '<img  src="https://cdn.discordapp.com/app-assets/' . $row['applicationID'] . '/' . $row['smallImage'] . '.png" class="status-icon">'; } ?>
                                 </div>
