--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                               <div  class="info__header">Playing a game</div>
                               <div  class="info__game">
                                 <div  class="game__icon">
-                                  <img id="largeImage">
-                                  <img id="smallImage">
+                                  <img class="game" id="largeImage">
+                                  <img  class="status-icon" id="smallImage">
                                   <?php if($row['largeImage'] != 'null') { echo '<img  src="https://cdn.discordapp.com/app-assets/' . $row['applicationID'] . '/' . $row['largeImage'] . '.png" class="game">'; } ?>
                                   <?php if($row['smallImage'] != 'null') { echo '<img  src="https://cdn.discordapp.com/app-assets/' . $row['applicationID'] . '/' . $row['smallImage'] . '.png" class="status-icon">'; } ?>
                                 </div>
