--- a/index.html
+++ b/index.html
@@ -74,17 +74,25 @@
                       </div>
                     </div>
                   </div>
-                          <div  class="usercard__activity">
-                            <div  class="activity__info">
-                              <div  class="info__header">Playing a game</div>
-                              <div  class="info__game">
-                                <div  class="game__icon">
+                          <div class="usercard__activity">
+                            <div class="activity__info">
+                              <div class="info__header">Playing a game</div>
+                              <div class="info__game">
+                                <div class="game__icon">
                                   <img class="game" id="largeImage">
                                   <img class="status-icon" id="smallImage">
                                 </div>
-                                <div  class="game__content"><div  class="game__title text-row"><span id="game"></span></div><div  class="game__st-line text-row"><span id="details"></span></div>
-                                <div  class="game__nd-line text-row"><p id="state"></p></div>
-                                <div  class="game__time text-row">-</div>
+                                <div class="game__content">
+                                  <div class="game__title text-row">
+                                    <span id="game"></span>
+                                  </div>
+                                  <div class="game__st-line text-row">
+                                    <span id="details"></span>
+                                  </div>
+                                <div class="game__nd-line text-row">
+                                  <span id="state"></span>
+                                </div>
+                                <div class="game__time text-row">-</div>
                               </div>
                             </div>
                           </div>
@@ -101,6 +109,7 @@
               const username = document.getElementById('username');
               const game = document.getElementById('game');
               const details = document.getElementById('details');
+              const state = document.getElementById('state');
 
               const largeImage = document.getElementById('largeImage');
               const smallImage = document.getElementById('smallImage');
@@ -112,7 +121,8 @@
 
                 username.innerHTML = `${data.userTag}`;
                 game.innerHTML = `${data.game}`;
-                state.innerHTML = `${data.details}`;
+                details.innerHTML = `${data.details}`;
+                state.innerHTML = `${data.state}`;
 
                 largeImage.src = `https://cdn.discordapp.com/app-assets/${data.applicationID}/${data.largeImage}.png`;
                 smallImage.src = `https://cdn.discordapp.com/app-assets/${data.applicationID}/${data.smallImage}.png`;
